--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-vue": "^9.1.1",
     "filemanager-webpack-plugin": "^7.0.0",
     "image-webpack-loader": "^8.1.0",
+    "less": "^4.1.3",
     "lint-staged": "^13.0.2",
     "plop": "^3.1.1",
     "prettier": "^2.7.1",
